[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/hazard/spike.png" type="Texture" id=1]
[ext_resource path="res://scenes/game/world/environment/hazards/SpikeHazard.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/world/entity/components/hit_box/HitBox.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 5, 5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[sub_resource type="SegmentShape2D" id=5]
b = Vector2( 8, 0 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 1, 0 )
b = Vector2( 8, 0 )

[sub_resource type="SegmentShape2D" id=7]
b = Vector2( 7, 2.38419e-07 )

[node name="SpikeHazard" type="Node2D"]
script = ExtResource( 2 )

[node name="InHitBox" parent="." instance=ExtResource( 3 )]
hit_box_action_type = 1
__team = "enemy_team"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InHitBox"]
shape = SubResource( 9 )

[node name="OutHitBox" parent="." instance=ExtResource( 3 )]
__team = "enemy_team"

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutHitBox"]
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "up"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
collision_mask = 0

[node name="TopLine" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -4, -3 )
shape = SubResource( 5 )
one_way_collision = true

[node name="RightLine" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 4, -4 )
rotation = 1.5708
shape = SubResource( 6 )
one_way_collision = true

[node name="LeftLine" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -4, 4 )
rotation = -1.5708
shape = SubResource( 7 )
one_way_collision = true

[node name="DownTimer" type="Timer" parent="."]
wait_time = 2.3
one_shot = true

[connection signal="hit_received" from="InHitBox" to="." method="_on_InHitBox_hit_received"]
[connection signal="hit_dealt" from="OutHitBox" to="." method="_on_OutHitBox_hit_dealt"]
[connection signal="timeout" from="DownTimer" to="." method="_on_DownTimer_timeout"]
